# heterocomp

./: .gitignore  CMakeLists.txt  README.md
cmake/: defines.cmake
junk/: host.cpp
src/: CMakeLists.txt  common.hpp  host.cpp  image_test.cpp  opencl_framework.cpp  opencl_framework.hpp  sandbox_app.cpp  utils.cpp  utils.hpp
src/env/: env.hpp  env_linux.cpp  env_windows.cpp
src/kernels/: add.cl  blend.cl
tests/: CMakeLists.txt  image_test.cpp  sandbox.cpp
